# barellm

./: .gitignore  AGENTS.md  Justfile  README.md  pyproject.toml  pyrightconfig.json
docs/: FINETUNE.md  JOURNAL.md  ROADMAP.md
githooks/: pre-commit
scripts/: README.md  block_table_demo.py  decode_benchmark.py  forward_vs_generate.py  fragmentation_demo.py  inspect_kv_cache.py  inspect_template.py  kv_cache_budget.py  param_audit.py  prefill_benchmark.py  run_qwen3.py  simple_engine.py  trace_attention.py  trace_block.py  verify_rope.py
src/barellm/: cli.py  config.py  generate.py  hub.py
src/barellm/model/: weights.py
src/barellm/sampling/: sampler.py  stops.py
tests/: test_cli.py  test_model.py  test_sampler.py  test_stops.py
